--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,24 +6,23 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-    <!--         android:usesPermissionFlags="neverForLocation" tools:targetApi="s" -->
+    <!-- android:usesPermissionFlags="neverForLocation" tools:targetApi="s" -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
-
     <uses-feature android:name="android.hardware.bluetooth" android:required="true" />
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
-        <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
+        android:name=".bluetoothService.IBeaconDeviceScanningService"
         android:allowBackup="true"
-        android:debuggable="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:debuggable="true"
         android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -31,9 +30,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EchoPoint"
-        tools:targetApi="tiramisu"
-        tools:ignore="HardcodedDebugMode">
-
+        tools:ignore="HardcodedDebugMode"
+        tools:targetApi="tiramisu" >
+        <activity
+            android:name=".ManagerDevicesAndPermissions"
+            android:exported="false" />
         <activity
             android:name=".ScanAndCommunicationSelectedDevice"
             android:exported="false" />
@@ -58,15 +59,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BeaconScanPermissionsActivity" android:exported="false" />
 
-        <service
+       <!-- <service
             android:name="org.altbeacon.beacon.service.ScanJob"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <meta-data
             android:name="android.app.job.JobScheduler.SCHEDULE_IMMEDIATE"
-            android:value="true" />
-
+            android:value="true" /> -->
     </application>
 
 </manifest>
