--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,12 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <!--<uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />-->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".bluetoothService.IBeaconDeviceScanningService"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:debuggable="true"
         android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -30,8 +28,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EchoPoint"
+        tools:targetApi="tiramisu">
+<!--
+        android:dataExtractionRules="@xml/data_extraction_rules"
+android:debuggable="true"
         tools:ignore="HardcodedDebugMode"
-        tools:targetApi="tiramisu" >
+        -->
         <activity
             android:name=".ManagerDevicesAndPermissions"
             android:exported="false" />
@@ -55,19 +57,11 @@
             android:theme="@style/Theme.EchoPoint" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BeaconScanPermissionsActivity" android:exported="false" />
+        <activity android:name="com.gtdvm.echopoint.BeaconScanPermissionsActivity" android:exported="false" />
 
-       <!-- <service
-            android:name="org.altbeacon.beacon.service.ScanJob"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
-
-        <meta-data
-            android:name="android.app.job.JobScheduler.SCHEDULE_IMMEDIATE"
-            android:value="true" /> -->
     </application>
 
 </manifest>
