--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
     <!--<uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />-->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+    </queries>
+
     <application
         android:name="com.gtdvm.echopoint.bluetoothService.IBeaconDeviceScanningService"
         android:allowBackup="true"
